fix: text too long flash, fontfamilies, fontsizes

--- a/src/assets/styles/PopupHeadingConfig.css
+++ b/src/assets/styles/PopupHeadingConfig.css
@@ -13,10 +13,12 @@
 
     .body {
         height: 85%;
-        /* overflow: auto; */
+        overflow: auto;
 
         .headingContainer {
             .heading {
+                overflow-x: hidden;
+                white-space: nowrap;
                 width: 50%;
             }
 
